first attempt at combining stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- custom -->
     <link href="css/custom.css" rel="stylesheet">
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 
   </head>
   <body>
@@ -65,6 +65,20 @@
         <td data-column="5"><div></div></td>
       </tr>
 
+    </table>
+
+    <table id="instruct">
+      <tr>
+        <td><div class='a'></div></td>
+        <td>-></td>
+        <td><div class='b'></div></td>
+        <td>-></td>
+        <td><div class='c'></div></td>
+        <td>-></td>
+        <td><div class='d'></div></td>
+        <td>-></td>
+        <td><div class='e'></div></td>
+      </tr>
     </table>
     <!-- <div class="container">
       <div class="row">
