--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <link href="css/custom.css" rel="stylesheet">
     <script src="js/script2.js"></script>
 
+    <!-- font -->
+    <link href='https://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
-    <h1>Triple Town</h1>
-    <table>
+
+    <h1>SPACEEE</h1>
+    <table id='gameboard'>
       <tr data-row='0'>
         <td data-column="0"><div></div></td>
         <td data-column="1"><div></div></td>
@@ -64,7 +69,16 @@
         <td data-column="4"><div></div></td>
         <td data-column="5"><div></div></td>
       </tr>
-
+    </table>
+    <table id="control">
+      <tr>
+        <td id='next'>
+          <p>Next item:</p>
+          <span></span>
+          <!-- <span class='a-info'></span> -->
+        </td>
+        <td></td>
+      </tr>
     </table>
 
     <table id="instruct">
@@ -80,55 +94,6 @@
         <td><div class='e'></div></td>
       </tr>
     </table>
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-offset-3"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
-      </div>
-    </div> -->
+    <a href="http://www.freepik.com/free-vector/hand-painted-beautiful-galaxy-background_846168.htm">Designed by Freepik</a>
   </body>
 </html>
