--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- custom -->
     <link href="css/custom.css" rel="stylesheet">
-    <script src="js/script2.js"></script>
+    <script src="js/script3.js"></script>
 
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
@@ -22,59 +22,61 @@
     <h1>SPACEEE</h1>
     <table id='gameboard'>
       <tr data-row='0'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="0" data-column="0"><div></div></td>
+        <td data-row="0" data-column="1"><div></div></td>
+        <td data-row="0" data-column="2"><div></div></td>
+        <td data-row="0" data-column="3"><div></div></td>
+        <td data-row="0" data-column="4"><div></div></td>
+        <td data-row="0" data-column="5"><div></div></td>
       </tr>
       <tr data-row='1'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="1" data-column="0"><div></div></td>
+        <td data-row="1" data-column="1"><div></div></td>
+        <td data-row="1" data-column="2"><div></div></td>
+        <td data-row="1" data-column="3"><div></div></td>
+        <td data-row="1" data-column="4"><div></div></td>
+        <td data-row="1" data-column="5"><div></div></td>
       </tr>
       <tr data-row='2'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="2" data-column="0"><div></div></td>
+        <td data-row="2" data-column="1"><div></div></td>
+        <td data-row="2" data-column="2"><div></div></td>
+        <td data-row="2" data-column="3"><div></div></td>
+        <td data-row="2" data-column="4"><div></div></td>
+        <td data-row="2" data-column="5"><div></div></td>
       </tr>
       <tr data-row='3'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="3" data-column="0"><div></div></td>
+        <td data-row="3" data-column="1"><div></div></td>
+        <td data-row="3" data-column="2"><div></div></td>
+        <td data-row="3" data-column="3"><div></div></td>
+        <td data-row="3" data-column="4"><div></div></td>
+        <td data-row="3" data-column="5"><div></div></td>
       </tr>
        <tr data-row='4'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="4" data-column="0"><div></div></td>
+        <td data-row="4" data-column="1"><div></div></td>
+        <td data-row="4" data-column="2"><div></div></td>
+        <td data-row="4" data-column="3"><div></div></td>
+        <td data-row="4" data-column="4"><div></div></td>
+        <td data-row="4" data-column="5"><div></div></td>
       </tr>
        <tr data-row='5'>
-        <td data-column="0"><div></div></td>
-        <td data-column="1"><div></div></td>
-        <td data-column="2"><div></div></td>
-        <td data-column="3"><div></div></td>
-        <td data-column="4"><div></div></td>
-        <td data-column="5"><div></div></td>
+        <td data-row="5" data-column="0"><div></div></td>
+        <td data-row="5" data-column="1"><div></div></td>
+        <td data-row="5" data-column="2"><div></div></td>
+        <td data-row="5" data-column="3"><div></div></td>
+        <td data-row="5" data-column="4"><div></div></td>
+        <td data-row="5" data-column="5"><div></div></td>
       </tr>
     </table>
     <table id="control">
       <tr>
+
         <td id='next'>
           <p>Next item:</p>
           <span></span>
+          <p id='description'></p>
           <!-- <span class='a-info'></span> -->
         </td>
         <td></td>
