no error version

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
           <p id='description'></p>
           <!-- <span class='a-info'></span> -->
         </td>
-        <td></td>
+        <td>
+          <button class="btn btn-block">Reset</button>
+          <p id='score'>SCORE: 0</p>
+        </td>
       </tr>
     </table>
 
