--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog" style="width: 550px;" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -124,26 +124,36 @@
           </div>
           <div class="modal-body">
             <table>
-              <tr>
-                <td style="width: 300px">
+              <tr class='row'>
+                <td class='col-xs-4'>
                   <p>Combine the planets</p>
                 </td>
-                <td style="width: 400px">
+                <td class='col-xs-4'>
                   <p>Combination patterns</p>
                 </td>
+                <td class='col-xs-4'>
+                  <p>Place these carefully...</p>
+                </td>
               </tr>
-              <tr>
-                <td>
+              <tr class='row'>
+                <td class='col-xs-4'>
                   <p><span class='a'></span> x3 = <span class='b'></span></p>
                   <p><span class='b'></span> x3 = <span class='c'></span></p>
                   <p><span class='c'></span> x3 = <span class='d'></span></p>
                   <p><span class='d'></span> x3 = <span class='e'></span></p>
                 </td>
-                <td>
+                <td class='col-xs-4'>
                   <p><img style='height:100px;'src='./img/howto1.png'></p>
                   <p><img style='height:100px;'src='./img/howto2.png'></p>
                   <p><img style='height:100px;'src='./img/howto3.png'></p>
                 </td>
+                <td class='col-xs-4'>
+                  <p><span class='crystal'></span><p>Use as wildcard to upgrade any 2 planets.</p></p>
+                  <p><span class='destruct'></span><p>Place on planet, enemy or obstacle to erase them.</p></p>
+                  <p><span class='enemy'></span><p>They will move around and block the map.</p></p>
+
+                </td>
+
               </tr>
             </table>
           </div>
@@ -154,6 +164,13 @@
       </div>
     </div>
 
+    <div class="modal fade bs-example-modal-sm" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <h2>Game Over!</h2>
+        </div>
+      </div>
+    </div>
     </div>
   </body>
 </html>
