--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
     <link href='https://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
 
+    <link href='https://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
     <div class='container'>
 
-    <h1>SPACEEE</h1>
-    <p>By Fiona Cheung</p>
-      <div class="row">
+    <h1>Triple Planet</h1>
+    <p>By Fiona Cheung || <a style='color:white;'href="http://www.freepik.com">Designed by Freepik</a></p>
+
       <div class="col-xs-7">
+        <img src='./img/human.png' id='human' class='floating'>
         <table id='gameboard' style="margin-right:0;">
           <tr data-row='0'>
             <td data-row="0" data-column="0"><div></div></td>
@@ -111,6 +114,7 @@
                 </td>
 
           </tr>
+
         </table>
       </div>
     </div>
@@ -120,7 +124,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">How to play</h4>
+            <h3 class="modal-title" id="myModalLabel">How to play</h3>
           </div>
           <div class="modal-body">
             <table>
